acces: contrast correction

--- a/style.css
+++ b/style.css
@@ -779,14 +779,16 @@ h4 {
     color: #F3976C!important;
 }
 
+/* contrast correction */
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #FFFFFF!important;
+    color: #000!important;
 }
 
+/* contrast correction */
 .btn-atomic-tangerine:hover {
     background: #c27956!important;
-    color: #FFFFFF!important;
+    color: #000!important;
 }
 
 .ltc-white {
